--- a/index.html
+++ b/index.html
@@ -21,5 +21,16 @@
 
       <h3><a href='/'>Icebreakers</a></h3>
     </header>
+    <main>
+      <div class="jumbotron">
+        <h1>Let's break the ice</h1>
+        <p>This is an icebreaker website</p>
+      </div>
+      <div class="questions">
+        <h4>What is your favorite Monty Python film?</h4>
+        <p><a href=#>Submit your answer</a></p>
+        <h4>Who is your favorite Monty Python actor?</h4>
+        <p><a href=#>Submit your answer</a></p>
+    </main>
   </body>
 </html>
