--- a/index.html
+++ b/index.html
@@ -34,5 +34,6 @@
     </main>
     <footer>
       <p>This website brought to you by the sound of galloping coconuts</p>
+    </footer>
   </body>
 </html>
