automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </main>
     
     <footer>
-      <p>This website brought to you by the sound of galloping coconuts</p>
+      <p>&copy; This website brought to you by the sound of galloping coconuts</p>
     </footer>
   </body>
 </html>
