--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <p><a href=#>Submit your answer</a></p>
         <h4>Who is your favorite Monty Python actor?</h4>
         <p><a href=#>Submit your answer</a></p>
+      </div>
     </main>
 
     <footer>
