automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </main>
 
     <footer>
-      <p>&copy; This website brought to you by the sound of galloping coconuts</p>
+      <p>This website brought to you by the sound of galloping coconuts</p>
     </footer>
   </body>
 </html>
